fix unreferenciable Role

--- a/moogie-service.yml
+++ b/moogie-service.yml
@@ -45,6 +45,15 @@ Parameters:
     Type: Number
     Default: 2
     Description: How many copies of the service task to run
+  Role:
+    Type: String
+    Default: ""
+    Description:
+      (Optional) An IAM role to give the service's containers if the code within needs to
+      access other AWS resources like S3 buckets, DynamoDB tables, etc
+
+Conditions:
+  HasCustomRole: !Not [!Equals [!Ref "Role", ""]]
 
 Resources:
   # A log group for storing the container logs for this service
