fix ALB health check error

--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Moogie Pix",
-  "name": "Moogie Pix",
+  "short_name": "Moogie Match",
+  "name": "Moogie Match",
   "icons": [
     {
       "src": "popcorn.png",
