--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-scripts": "4.0.3",
     "react-tinder-card": "^1.3.1",
     "socket.io-client": "^4.0.1",
